coefficient testing exapanded to account for monoids, groups, distributive property within ring forms. very thorough test suite.